--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@ button:focus-visible {
   background-color: rgb(202, 195, 195);
   border-radius: 8px;
   gap: 5px;
+  min-height: 400px;
+  min-width: 700px;
 
 
 }
