--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ button:focus-visible {
   border-radius: 8px;
   width: 140px;
   height: 100px;
+  font-weight: 500;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -128,13 +129,14 @@ button:focus-visible {
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
+  border-radius: 8px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content div {
   color: black;
-  padding: 12px 16px;
+  padding: 3px 8px;
   text-decoration: none;
   display: block;
   cursor: pointer;
